# Dice-Strategy-Simulator

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  martingale.cpp  test_001.cpp
include/: curve.h  dss.h  types.h
src/: curve.cpp  dss.cpp
strats/: 50x.cpp  martingale.cpp  og.cpp  orme.cpp
